--- a/css/styles.css
+++ b/css/styles.css
@@ -10,27 +10,25 @@ pre {
     font-size: 1.2em;
     color: #3F53D9;
     padding: 20px;
-    margin: 20px;
+    margin: auto;
+    width: 80vw
 }
 
 #subnetForm {
-    margin: 20px;
+    margin: auto;
     padding: 20px;
     background-color: #3F53D9;
     border-radius: 10px;
 
-    position: absolute;
-    top: 20%;
-    left: 50%;
+    width: 60vw;
 }
 
 #result{
-    margin: 20px;
+    margin: auto;
     padding: 20px;
     background-color: #3F53D9;
     border-radius: 10px;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    width: 60vw;
+    margin-top: 30px;
 }
