--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,16 @@ pre {
 
     width: 60vw;
 }
+#btnSubmit{
+    background: #455cf8;
+    color: white;
+    /* border-style: outset; */
+    border-color: #0066A2;
+    height: 50px;
+    width: 100px;
+    font: bold 15px arial, sans-serif;
+    text-shadow: none;
+}
 
 #result{
     margin: auto;
